--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ body {
 }
 
 .first-para {
-    padding-bottom: 45px;
+    padding: 25px 0px 50px;
+    text-align: center;
 }
 
 .first-headline {
@@ -16,7 +17,6 @@ body {
     height: 100%;
     font-style: bold;
     font-size: 60px;
-    padding-bottom: 25px;
     text-align: center;
 }
 
@@ -27,6 +27,7 @@ body {
     font-weight: 400;
     background-color: rgb(206, 77, 77);
     padding: 10px 20px;
+    margin-top: 20px;
     border-radius: 5px;
     font-size: 20px;
 }
@@ -35,14 +36,253 @@ body {
     background-image: linear-gradient(0deg, rgb(18, 18, 18), rgb(18, 18, 18, 0.10)), url(images/donation9.jpg);
     background-repeat: no-repeat;
     text-align: center;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background-size: cover;
-    position: absolute;
+    margin: 0;
+    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
 
+}
+
+.section-two {
+    background-color: rgb(27, 26, 26);
+    padding-top: 150px;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+
+
+}
+
+.title2 {
+    text-align: center;
+    font-size: 45px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.card-text {
+    text-align: center;
+    color: gray;
+    font-size: large;
+    margin-bottom: 100px;
+
+}
+
+#short-text {
+    padding-top: 50px;
+    text-align: center;
+    color: gray;
+    font-size: large;
+    margin-bottom: 10px;
+}
+
+.card1 {
+
+
+    display: flex;
+    justify-content: center;
+
+
+
+
+}
+
+.amount {
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    padding: 40px;
+
+
+}
+
+.card-amount {
+
+
+    border-radius: 5px;
+    background-color: white;
+    margin: 20px;
+    text-align: center;
+    cursor: pointer;
+
+}
+
+hr {
+    width: 50%;
+    margin: 0 auto;
+}
+
+.section-three {
+    background-color: rgb(27, 26, 26);
+    padding-top: 100px;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    display: flex;
+}
+
+.half-width {
+    width: 50%;
+    padding-left: 150px;
+
+}
+
+.title3 {
+    font-style: bold;
+    font-size: 60px;
+
+}
+
+.text {
+    padding-top: 15px;
+    color: gray;
+    font-size: large;
+    padding-bottom: 30px;
+}
+
+.link-button2 {
+    text-decoration: none;
+
+    color: black;
+    font-weight: 400;
+    background-color: rgb(206, 77, 77);
+    padding: 10px 20px;
+    margin-top: 20px;
+    border-radius: 5px;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.images {
+    width: 450px;
+    height: 500px;
+    border-radius: 10px;
+    padding-left: 20px;
+
+}
+
+.half-width2 {
+    width: 50%;
+    text-align: center;
+
+}
+
+#text {
+    text-align: left;
+    padding-left: 100px;
+}
+
+.last-card {
+    justify-content: center;
+    display: flex;
+    margin-top: 35px;
+
+}
+
+.input-sec {
+    display: flex;
+    justify-content: center;
+    padding: 75px;
+}
+
+.email {
+    width: 200px;
+    height: 30px;
+    background-color: rgb(206, 199, 199);
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    text-align: left;
+    padding-left: 20px;
+    padding-top: 8px;
+    color: gray;
+}
+
+#input {
+    border: none;
+    background-color: rgb(206, 199, 199);
+}
+
+.subscribe {
+    width: 150px;
+    height: 30px;
+    background-color: rgb(228, 104, 104);
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    text-align: center;
+    font-weight: bold;
+    cursor: pointer;
+
+    padding-top: 8px;
+    color: rgb(12, 12, 12);
+}
+
+
+.rect {
+    width: 700px;
+    height: 200px;
+    background-color: antiquewhite;
+    justify-content: center;
+
+
+}
+
+.large-card {
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+
+
+}
+
+.card-element {
+    text-align: left;
+    border-radius: 5px;
+    margin: 20px;
+    padding: 50px;
+    width: 220px;
+    height: 250px;
+
+}
+
+#card-color1 {
+    background-color: rgb(32, 46, 39);
+}
+
+#card-color2 {
+    background-color: rgb(51, 34, 35);
+}
+
+#card-color3 {
+    background-color: rgb(154, 158, 147);
+}
+
+.footer {
+
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 180px;
+    background-color: rgb(14, 13, 24);
+    color: white;
+    text-align: center;
+
+    justify-content: center;
+}
+
+.bh {
+    padding: 50px;
+    font-size: 30px;
+    font-family: ;
+    color: rgb(228, 69, 69);
 }
 
 /*
