--- a/style.css
+++ b/style.css
@@ -115,6 +115,17 @@ body {
 
 }
 
+.card-amount.card2 {
+    border: 4px solid;
+    background-color: none;
+    border-color: rgb(209, 109, 125);
+
+}
+
+#card2 {
+    color: rgb(209, 109, 125);
+}
+
 #amount-id {
     border: none;
     background-color: rgb(27, 26, 26);
